--- a/screen/css/COmmunity-visit.css
+++ b/screen/css/COmmunity-visit.css
@@ -191,7 +191,7 @@
 .community-visit-thumbnail img {
     width: 100%;
     height: 265px;
-    border-radius: 10px;
+    border-radius: 0 10px 10px 0;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
     object-fit: cover;
 }
@@ -227,11 +227,10 @@
     position: sticky; /* Sticky positioning for sidebar */
     top: 150px; /* Set top value to ensure it becomes sticky after header */
     height: 290px;
-    max-width: 220px;
+    max-width: 180px;
     background: white;
     border: 1px solid #ddd;
     border-radius: 5px;
-    padding: 10px;
     box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
     z-index: 10; /* Make sure the sidebar stays above other content */
     margin-right: 100px;
@@ -264,18 +263,20 @@
     bottom: 20px; /* Adjust this value to add some space from the bottom */
     left: 50%; /* Position the button in the center horizontally */
     transform: translateX(-50%); /* Offset the left position by 50% of the button width to truly center it */
-    width: 50%; /* Or any width you prefer */
+    width: 60%; /* Or any width you prefer */
     text-align: center;
     background: #6c63ff;
     color: white;
-    padding: 10px;
+    padding: 5px 10px 5px 10px;
     border-radius: 30px;
     cursor: pointer;
     font-family: 'Lalezar';
     font-size: 18px;
 }
 
-
+.community-visit-sidebar button:hover {
+    background-color:#574fff;
+}
 
 .community-visit-category a {
     text-decoration: none;
@@ -285,4 +286,15 @@
     font-size: 17px;
     color: #7E7E7E;
     margin-left: 5px;
+}
+
+.blogging-image {
+    width: 10%;
+}
+
+.community-visit-sidebar img {
+    width: 100%;
+    height: 100%;
+    object-fit: contain;
+    border: 1px solid #f5f5f5;
 }
