--- a/screen/css/homepage.css
+++ b/screen/css/homepage.css
@@ -103,10 +103,9 @@
 }
 
 .homepage-sidebar-right {
-  width: 150px;
-  height: 45%;
+  width: 200px;
+  height: 57%;
   background-color: #f9f9f9;
-  padding: 20px;
   margin-top: 40px;
   margin-right: 240px;
   border: 2px solid #ddd;
@@ -114,6 +113,13 @@
   top: 46px;
   right: 0;
   z-index: 5;
+  object-fit: contain;
+}
+
+.homepage-sidebar-right img {
+  width: 100%;
+  height: 500px;
+  object-fit: cover;
 }
 
 .sidebar-right h3 {
@@ -123,7 +129,6 @@
 
 /* Prevent shrinking of post cards */
 .post-card {
-
   background-color: #fafafa;
   border: 1px solid #E3E4E5;
   border-radius: 10px;
@@ -137,7 +142,7 @@
   margin-bottom: 20px;
   overflow: hidden; /* Ensure no scroll within the card itself */
   justify-content: space-between;
-  transform: translate(3%, 0%); /* Adjust X and Y axes */
+  transform: translate(5%, 0%); /* Adjust X and Y axes */
 }
 
 .home-page-container, 
@@ -371,6 +376,7 @@
 }
 
 .savedblog {
-  text-align: center;
-  font-size: 30px;
+ position: absolute;
+ font-size: 30px;
+ left: 680px;
 }
