--- a/screen/css/homepage.css
+++ b/screen/css/homepage.css
@@ -380,3 +380,18 @@
  font-size: 30px;
  left: 680px;
 }
+
+.load-more-btn {
+  background-color: #007bff;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  transition: background-color 0.3s ease;
+}
+
+.load-more-btn:hover {
+  background-color: #0056b3;
+}
