--- a/screen/css/navigationBar.css
+++ b/screen/css/navigationBar.css
@@ -191,3 +191,102 @@ body {
   padding: 0.1em 0.5em;
   font-size: 0.8em;
 }
+
+/* Responsive for tablets */
+@media screen and (max-width: 768px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 20px;
+  }
+
+  .logo {
+    margin-left: 0;
+  }
+
+  .search-bar {
+    width: 100%;
+    justify-content: flex-start;
+    margin: 10px 0;
+  }
+
+  .search-bar input {
+    width: 80%;
+  }
+
+  .icons {
+    margin-left: 0;
+  }
+
+  .profile img {
+    margin-left: 0;
+  }
+
+  .dropdown {
+    width: 150px;
+  }
+
+  .logo span {
+    font-size: 18px;
+  }
+
+  .icons .icon {
+    font-size: 18px;
+  }
+}
+
+/* Responsive for cellphones */
+@media screen and (max-width: 480px) {
+  .navbar {
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 10px 15px;
+  }
+
+  .logo {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .search-bar {
+    width: 100%;
+    justify-content: flex-start;
+    margin: 10px 0;
+  }
+
+  .search-bar input {
+    width: 80%;
+  }
+
+  .icons {
+    margin: 0;
+    margin-top: 5px;
+  }
+
+  .profile img {
+    margin-left: 0;
+    margin-right: 0;
+  }
+
+  .dropdown {
+    width: 120px;
+    left: 50%;
+    transform: translateX(-50%);
+  }
+
+  .logo span {
+    font-size: 16px;
+  }
+
+  .icons .icon {
+    font-size: 16px;
+  }
+
+  .dropdown a {
+    padding: 8px;
+  }
+
+  .dropdown h5 {
+    font-size: 14px;
+  }
+}
